fix: update golangci-lint gci prefix to one2x-ai organization

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -52,7 +52,7 @@ formatters:
       sections:
         - standard
         - default
-        - prefix(github.com/stumble/wpgx)
+        - prefix(github.com/one2x-ai/wpgx)
   exclusions:
     generated: lax
     paths:
