feat: add SSL mode configuration support for PostgreSQL 17.5+ (#1)
* feat: add SSL mode configuration support

Add SSLMode field to Config and ReadReplicaConfig with default value "require".
This allows configuring SSL mode via POSTGRES_SSLMODE environment variable.

Changes:
- Add SSLMode string field to Config and ReadReplicaConfig (default: "require")
- Update pgxConfig struct to include SSLMode
- Modify newRawPgxPool to use dynamic sslmode parameter instead of hardcoded "disable"
- Pass SSLMode when creating primary and replica pools

This change ensures PostgreSQL connections use SSL by default, which is
required for PostgreSQL 17.5+ on AWS RDS.

* fix: disable SSL mode for test environments

- Set SSLMode to disable in test container setup
- Add SSL mode to direct connection test setup
- Fixes test failures after default SSLMode changed to require

* refactor: update module path from stumble to one2x-ai

- Change module path in go.mod
- Update all internal import references

* fix: update test data to use one2x-ai organization URL

- Update github_url in test data from stumble to one2x-ai

* fix: reorder imports for gci linter compliance

- Sort third-party imports alphabetically as required by gci linter

* fix: update golangci-lint gci prefix to one2x-ai organization

* fix: restore alphabetical import ordering in testsuite.go

* fix: force golangci-lint cache refresh with config comment

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -52,10 +52,10 @@ formatters:
       sections:
         - standard
         - default
-        - prefix(github.com/stumble/wpgx)
+        - prefix(github.com/one2x-ai/wpgx)
   exclusions:
     generated: lax
     paths:
       - third_party$
       - builtin$
-      - examples$
+      - examples$# Updated for one2x-ai fork
